traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: warning: enclosing method estSurPositionFinale has result type Unit: return value discarded
  return(res)  
  ^Snake:13: error: value unary_! is not a member of Unit
  while (!(estSurPositionFinale())){
         ^